# entropyTestingSP800-90B

./: .gitignore  README.md  compileCode.sh  makeDirStructure.sh
ArduinoCode/atecc508a_random_data_gen/: atecc508a_random_data_gen.ino
Code/CreateDataFiles/: CMakeLists.txt  main.cpp
Code/EntropyEstimation/: CMakeLists.txt  main.cpp
Code/MergeSP80090B_Output/: CMakeLists.txt  main.cpp
ExperimentData/Results/: atecc508a_1bit_combined_results.csv  atecc508a_2bit_combined_results.csv  atecc508a_3bit_combined_results.csv  atecc508a_4bit_combined_results.csv  atecc508a_5bit_combined_results.csv  atecc508a_6bit_combined_results.csv  atecc508a_7bit_combined_results.csv  atecc508a_combined_results.csv  atecc508a_sleep_combined_results.csv  atecc608a_combined_results.csv  atecc608a_sleep_combined_results.csv  e_exp1_combined_results.csv  goldenRatioNewton_combined_results.csv  log2MachinPrimary_combined_results.csv  piChudnovsky_combined_results.csv  rand_01_125_875_combined_results.csv  rand_01_25_75_combined_results.csv  rand_01_50_50_combined_results.csv  sha2_256_1bit_combined_results.csv  sha2_256_2bit_combined_results.csv  sha2_256_3bit_combined_results.csv  sha2_256_4bit_combined_results.csv  sha2_256_5bit_combined_results.csv  sha2_256_6bit_combined_results.csv  sha2_256_7bit_combined_results.csv  sha2_256_combined_results.csv  sha3_256_1bit_combined_results.csv  sha3_256_2bit_combined_results.csv  sha3_256_3bit_combined_results.csv  sha3_256_4bit_combined_results.csv  sha3_256_5bit_combined_results.csv  sha3_256_6bit_combined_results.csv  (+14 more)
